--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
         "tolist",
         "userid"
     ],
-    "python.pythonPath": "/Users/congyuwang/opt/miniconda3/bin/python"
+    "python.pythonPath": "/Users/congyuwang/opt/miniconda3/bin/python",
+    "python.envFile": "${workspaceFolder}/.env"
 }
